--- a/src/main/resources/com/example/sistema_gerenciamentofx/technician-element-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/technician-element-view.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-<HBox fx:id="itemC" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="53.0" prefWidth="390.0" spacing="8.0" style="-fx-background-color: #fffafa; -fx-background-radius: 5; -fx-background-insets: 0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.TechnicianElementController">
+<HBox fx:id="itemC" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="53.0" prefWidth="372.0" spacing="8.0" style="-fx-background-color: #fffafa; -fx-background-radius: 5; -fx-background-insets: 0;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.TechnicianElementController">
    <children>
-      <ImageView fitHeight="58.0" fitWidth="234.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="49.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@images/icon12.png" />
+            <Image url="@images/7.png" />
          </image>
          <HBox.margin>
             <Insets left="10.0" />
          </HBox.margin>
       </ImageView>
-      <Label fx:id="techinicianName" prefHeight="18.0" prefWidth="134.0" text="Josefino Freitas Soares" textFill="#47077f">
+      <Label fx:id="techinicianName" prefHeight="18.0" prefWidth="120.0" text="Josefino Freitas Soares" textFill="#47077f">
          <HBox.margin>
             <Insets />
          </HBox.margin>
