--- a/src/main/resources/com/example/sistema_gerenciamentofx/part-service-element.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/part-service-element.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="165.0" prefWidth="140.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ImageView fitHeight="88.0" fitWidth="103.0" layoutX="25.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
@@ -14,17 +13,27 @@
             <Image url="@images/icon12.png" />
          </image>
       </ImageView>
-      <Label alignment="CENTER" layoutX="4.0" layoutY="78.0" prefHeight="30.0" prefWidth="129.0" text="RAM memory" textFill="#47077f">
+      <Label fx:id="partName" alignment="CENTER" layoutX="4.0" layoutY="78.0" prefHeight="30.0" prefWidth="129.0" text="RAM memory" textFill="#47077f">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label layoutX="4.0" layoutY="107.0" prefHeight="30.0" prefWidth="140.0" text="Qtd: 15" textFill="#47077f">
+      <Label layoutX="4.0" layoutY="107.0" prefHeight="30.0" prefWidth="31.0" text="Qtd:" textFill="#47077f">
          <font>
             <Font size="16.0" />
          </font>
       </Label>
-      <Label layoutX="4.0" layoutY="128.0" prefHeight="30.0" prefWidth="144.0" text="Price: R$ 3000.00" textFill="#47077f">
+      <Label layoutX="4.0" layoutY="128.0" prefHeight="30.0" prefWidth="42.0" text="Price: " textFill="#47077f">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="qtdPart" layoutX="40.0" layoutY="107.0" prefHeight="30.0" prefWidth="106.0" text="15" textFill="#47077f">
+         <font>
+            <Font size="16.0" />
+         </font>
+      </Label>
+      <Label fx:id="pricePart" layoutX="46.0" layoutY="128.0" prefHeight="30.0" prefWidth="106.0" text="R$ 3000.00" textFill="#47077f">
          <font>
             <Font size="16.0" />
          </font>
