💫 feat: funcionamento parcial para tela da ordem atual

--- a/src/main/resources/com/example/sistema_gerenciamentofx/actua-order.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/actua-order.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="455.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<Pane prefHeight="455.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ActualOrderController">
    <children>
       <Label layoutX="19.0" layoutY="14.0" prefHeight="50.0" prefWidth="172.0" text="Actual Service" textFill="#47077f">
          <font>
