--- a/src/main/resources/com/example/sistema_gerenciamentofx/actual-order-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/actual-order-view.fxml
@@ -11,19 +11,14 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<Pane prefHeight="455.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ActualOrderController">
+<Pane fx:id="pnlActualService" prefHeight="455.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.ActualOrderController">
    <children>
-      <Label layoutX="19.0" layoutY="14.0" prefHeight="50.0" prefWidth="172.0" text="Actual Service" textFill="#47077f">
+      <Label layoutX="14.0" layoutY="6.0" prefHeight="50.0" prefWidth="172.0" text="Actual Service" textFill="#47077f">
          <font>
             <Font size="24.0" />
          </font>
       </Label>
-      <Label layoutX="550.0" layoutY="155.0" text="Client Info" textFill="#47077f">
-         <font>
-            <Font size="24.0" />
-         </font>
-      </Label>
-      <Pane layoutX="556.0" layoutY="178.0" prefHeight="263.0" prefWidth="232.0">
+      <Pane fx:id="clientData" layoutX="556.0" layoutY="173.0" prefHeight="283.0" prefWidth="232.0">
          <children>
             <ImageView fx:id="imgClient" fitHeight="66.0" fitWidth="77.0" layoutX="80.0" layoutY="20.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -68,6 +63,11 @@
             <Label fx:id="telephoneClient" layoutX="14.0" layoutY="235.0" prefHeight="35.0" prefWidth="214.0" text="11 91234 5678" textFill="#863cc7">
                <font>
                   <Font size="14.0" />
+               </font>
+            </Label>
+            <Label layoutX="-3.0" layoutY="-3.0" text="Client Info" textFill="#47077f">
+               <font>
+                  <Font size="24.0" />
                </font>
             </Label>
          </children>
@@ -161,12 +161,12 @@
             </Pane>
          </children>
       </Pane>
-      <Pane layoutX="576.0" layoutY="63.0" prefHeight="95.0" prefWidth="212.0">
+      <Pane layoutX="576.0" layoutY="31.0" prefHeight="127.0" prefWidth="212.0">
          <children>
-            <Button fx:id="deleteClient1" layoutX="138.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="delete" />
-            <Button fx:id="cancelOrder" layoutX="69.0" layoutY="1.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="cancel" />
-            <Button fx:id="updateOrder" layoutY="1.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="update" />
-            <Button fx:id="finalizeOrder" layoutX="1.0" layoutY="51.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="203.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="finalize" />
+            <Button fx:id="deleteOrder" layoutX="142.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="delete" />
+            <Button fx:id="cancelOrder" layoutX="4.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="cancel" />
+            <Button fx:id="updateOrder" layoutX="73.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="update" />
+            <Button fx:id="finalizeOrder" layoutX="4.0" layoutY="88.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="203.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="finalize" />
          </children>
       </Pane>
    </children>
