--- a/src/main/resources/com/example/sistema_gerenciamentofx/new-order-service-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/new-order-service-view.fxml
@@ -12,6 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <Pane fx:id="pnlNewOrder" prefHeight="455.0" prefWidth="793.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sistema_gerenciamentofx.controller.NewOrderController">
    <children>
@@ -89,10 +90,6 @@
             <Font size="20.0" />
          </font>
       </Label>
-      <Label fx:id="cpfSelected" alignment="CENTER" layoutX="269.0" layoutY="109.0" prefHeight="30.0" prefWidth="107.0" text="111.222.333-44" textFill="#47077f">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
+      <Text fx:id="cpfSelected" layoutX="259.0" layoutY="128.0" strokeType="OUTSIDE" strokeWidth="0.0" text="oi " wrappingWidth="107.0" />
    </children>
 </Pane>
