--- a/src/main/resources/com/example/sistema_gerenciamentofx/new-order-service-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/new-order-service-view.fxml
@@ -53,7 +53,7 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField fx:id="searchClient" layoutX="49.0" layoutY="35.0" prefHeight="27.0" prefWidth="116.0" promptText="type a CPF client" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" text="111.222.333-44" />
+            <TextField fx:id="searchClient" layoutX="49.0" layoutY="35.0" prefHeight="27.0" prefWidth="116.0" promptText="type a CPF client" style="-fx-border-color: #47077F; -fx-background-color: #fffafa; -fx-border-radius: 20;" styleClass="text-input" />
             <Button fx:id="searchBtn" layoutX="172.0" layoutY="33.0" mnemonicParsing="false" onAction="#searchClient" prefHeight="28.0" prefWidth="41.0" style="-fx-background-color: #47077F; -fx-background-radius: 10;" textFill="WHITE">
                <cursor>
                   <Cursor fx:constant="OPEN_HAND" />
