--- a/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/clients-view.fxml
@@ -59,22 +59,25 @@
             </HBox>
          </children>
       </Pane>
-      <ImageView fitHeight="184.0" fitWidth="249.0" layoutX="631.0" layoutY="-43.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="184.0" fitWidth="249.0" layoutX="611.0" layoutY="-43.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@images/5.png" />
          </image>
       </ImageView>
-      <HBox layoutX="44.0" layoutY="65.0" prefHeight="102.0" prefWidth="571.0" spacing="50.0">
+      <HBox alignment="CENTER_RIGHT" layoutX="208.0" layoutY="63.0" prefHeight="102.0" prefWidth="571.0" spacing="10.0">
          <children>
-            <Button fx:id="bttAdd" mnemonicParsing="false" onAction="#login" prefHeight="100.0" prefWidth="160.0" styleClass="button-cadastro" stylesheets="@css/styles.css" text="ADICIONAR">
+            <Button fx:id="bttAdd" mnemonicParsing="false" onAction="#login" prefHeight="39.0" prefWidth="105.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="Adicionar">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font size="16.0" />
                </font>
             </Button>
-            <Button fx:id="bttView" mnemonicParsing="false" onAction="#login" prefHeight="100.0" prefWidth="159.0" styleClass="button-cadastro" stylesheets="@css/styles.css" text="VISUALIZAR">
+            <Button fx:id="bttView" mnemonicParsing="false" onAction="#login" prefHeight="39.0" prefWidth="105.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="Visualizar">
                <font>
-                  <Font name="System Bold" size="15.0" />
+                  <Font size="16.0" />
                </font>
+               <HBox.margin>
+                  <Insets right="10.0" />
+               </HBox.margin>
             </Button>
          </children>
       </HBox>
