✨ feat: Adição da tela estoque.

--- a/src/main/resources/com/example/sistema_gerenciamentofx/css/styles.css
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/css/styles.css
@@ -19,7 +19,7 @@
 }
 
 .scroll-bar:horizontal, .scroll-bar:vertical{
-    -fx-background-color:transparent;
+    -fx-background-color:#fffafa;
 }
 
 .increment-button, .decrement-button {
@@ -80,3 +80,17 @@
   -fx-background-color: #47077F;
 }
 
+.stock-item{
+    -fx-background-color: #fffafa;
+    -fx-background-radius: 30;
+}
+
+.shadow{
+    -fx-effect: dropShadow(three-pass-box,rgba(0,0,0,0.1), 10.0 , 0.0 , 0.0 ,10.0);
+}
+
+.transparent{
+    -fx-background-color: #fffafa;
+    -fx-background-color: rgba(0,0,0,0);
+}
+1
