--- a/src/main/resources/com/example/sistema_gerenciamentofx/actual-order-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/actual-order-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -18,59 +19,35 @@
             <Font size="24.0" />
          </font>
       </Label>
-      <Pane fx:id="clientData" layoutX="556.0" layoutY="173.0" prefHeight="283.0" prefWidth="232.0">
+      <Pane fx:id="clientData" layoutX="547.0" layoutY="173.0" prefHeight="271.0" prefWidth="235.0" style="-fx-background-color: #FFF9F9;" stylesheets="@css/styles.css">
          <children>
             <ImageView fx:id="imgClient" fitHeight="66.0" fitWidth="77.0" layoutX="80.0" layoutY="20.0" nodeOrientation="INHERIT" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/icon12.png" />
                </image>
             </ImageView>
-            <Label fx:id="nameClient" layoutX="14.0" layoutY="105.0" prefHeight="35.0" prefWidth="214.0" text="Fulaninho de Tal" textFill="#863cc7">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
             <Label layoutX="5.0" layoutY="86.0" prefHeight="30.0" prefWidth="67.0" text="Name:" textFill="#47077f">
                <font>
-                  <Font size="20.0" />
+                  <Font name="Arial" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="6.0" layoutY="135.0" prefHeight="30.0" prefWidth="61.0" text="CPF:" textFill="#47077f">
+            <Label layoutX="8.0" layoutY="136.0" prefHeight="30.0" prefWidth="61.0" text="CPF:" textFill="#47077f" />
+            <Label fx:id="cpfClient" layoutX="79.0" layoutY="133.0" prefHeight="35.0" prefWidth="214.0" text="000.111.222.333-44" textFill="#863cc7" />
+            <Label layoutX="7.0" layoutY="181.0" prefHeight="30.0" prefWidth="89.0" text="Adress:" textFill="#47077f" />
+            <Label fx:id="adressClient" layoutX="80.0" layoutY="179.0" prefHeight="35.0" prefWidth="212.0" text="R: Armagura, N123" textFill="#863cc7" />
+            <Label layoutX="7.0" layoutY="218.0" prefHeight="30.0" prefWidth="106.0" text="Telephone:" textFill="#47077f" />
+            <Label fx:id="telephoneClient" layoutX="79.0" layoutY="216.0" prefHeight="35.0" prefWidth="214.0" text="11 91234 5678" textFill="#863cc7" />
+            <Label layoutX="18.0" layoutY="9.0" text="Client Info" textFill="#47077f">
                <font>
                   <Font size="20.0" />
                </font>
             </Label>
-            <Label fx:id="cpfClient" layoutX="14.0" layoutY="155.0" prefHeight="35.0" prefWidth="214.0" text="000.111.222.333-44" textFill="#863cc7">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="7.0" layoutY="181.0" prefHeight="30.0" prefWidth="89.0" text="Adress:" textFill="#47077f">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="adressClient" layoutX="14.0" layoutY="196.0" prefHeight="35.0" prefWidth="212.0" text="R: Armagura, N123, Bairro: Centro, Bahia, Brazil" textFill="#863cc7">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="7.0" layoutY="218.0" prefHeight="30.0" prefWidth="106.0" text="Telephone:" textFill="#47077f">
-               <font>
-                  <Font size="20.0" />
-               </font>
-            </Label>
-            <Label fx:id="telephoneClient" layoutX="14.0" layoutY="235.0" prefHeight="35.0" prefWidth="214.0" text="11 91234 5678" textFill="#863cc7">
-               <font>
-                  <Font size="14.0" />
-               </font>
-            </Label>
-            <Label layoutX="-3.0" layoutY="-3.0" text="Client Info" textFill="#47077f">
-               <font>
-                  <Font size="24.0" />
-               </font>
-            </Label>
+            <Label fx:id="nameClient" layoutX="79.0" layoutY="84.0" prefHeight="35.0" prefWidth="185.0" text="Fulaninho de Tal" textFill="#863cc7" />
          </children>
+         <styleClass>
+            <String fx:value="client-item" />
+            <String fx:value="shadow" />
+         </styleClass>
       </Pane>
       <Pane layoutX="19.0" layoutY="67.0" prefHeight="378.0" prefWidth="521.0">
          <children>
@@ -121,7 +98,7 @@
                         <Font size="18.0" />
                      </font>
                   </Label>
-                  <ChoiceBox fx:id="setPaymentMethod" layoutX="20.0" layoutY="44.0" prefHeight="25.0" prefWidth="134.0" />
+                  <ChoiceBox fx:id="setPaymentMethod" layoutX="7.0" layoutY="43.0" prefHeight="25.0" prefWidth="134.0" stylesheets="@css/styles.css" />
                   <Label layoutX="4.0" layoutY="70.0" prefHeight="30.0" prefWidth="152.0" text="Client satisfaction" textFill="#47077f">
                      <font>
                         <Font size="18.0" />
@@ -161,7 +138,7 @@
             </Pane>
          </children>
       </Pane>
-      <Pane layoutX="576.0" layoutY="31.0" prefHeight="127.0" prefWidth="212.0">
+      <Pane layoutX="553.0" layoutY="31.0" prefHeight="127.0" prefWidth="235.0">
          <children>
             <Button fx:id="deleteOrder" layoutX="142.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="delete" />
             <Button fx:id="cancelOrder" layoutX="4.0" layoutY="44.0" mnemonicParsing="false" onAction="#handleClicks" prefHeight="39.0" prefWidth="65.0" style="-fx-border-color: #47077F; -fx-border-radius: 20; -fx-background-color: transparent; -fx-text-fill: #47077F;" stylesheets="@css/styles.css" text="cancel" />
