💫 feat: Adição do esboço da tela de gerar relatórios

--- a/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
+++ b/src/main/resources/com/example/sistema_gerenciamentofx/home-view.fxml
@@ -229,6 +229,7 @@
                </children>
             </Pane>
             <Pane fx:id="pnlManageTec" prefHeight="200.0" prefWidth="200.0" />
+            <Pane fx:id="pnlGenerateReport" prefHeight="200.0" prefWidth="200.0" />
          </children>
       </StackPane>
    </children>
